# calpp

./: .gitignore  CMakeLists.txt  ChangeLog  README  README.md  TODO
examples/: CMakeLists.txt  cal_il_double4.hpp  coalescingtest.cpp  dbl_nbody.cpp  dbl_nbody_kernel.cpp  dbl_nbody_worker.cpp  dbl_nbody_worker.h  func.cpp  matrixmult.cpp  matrixmult2.cpp  matrixmult3.cpp  nbody.cpp  nbody_kernel.cpp  nbody_worker.cpp  peekflops.cpp  uavwrite.cpp  vectorquantization.cpp
include/cal/: cal.hpp  cal_il.hpp  cal_il_atomics.hpp  cal_il_flat2d.hpp  cal_il_math.hpp  cal_il_rv7xx.hpp
include/cal/il/: cal_il.hpp  cal_il_base_types.hpp  cal_il_expression_assignable.hpp  cal_il_expression_swizzle.hpp  cal_il_expression_types.hpp  cal_il_flowcontrol.hpp  cal_il_flowcontrol_cmp.hpp  cal_il_func.hpp  cal_il_functors.hpp  cal_il_functors_bitop.hpp  cal_il_functors_cast.hpp  cal_il_functors_math.hpp  cal_il_functors_mathop.hpp  cal_il_functors_multimedia.hpp  cal_il_functors_relop.hpp  cal_il_input.hpp  cal_il_lds.hpp  cal_il_lds_atomics.hpp  cal_il_math.hpp  cal_il_misc.hpp  cal_il_multimedia.hpp  cal_il_ocl_functions.hpp  cal_il_operators.hpp  cal_il_operators_muldiv.hpp  cal_il_rv7xx.hpp  cal_il_source.hpp  cal_il_swizzle.hpp  cal_il_type_traits.hpp  cal_il_types.hpp  cal_il_uav.hpp  cal_il_uav_atomics.hpp
include/cal/il/math/: cal_il_atanh.hpp  cal_il_dd.hpp  cal_il_exp.hpp  cal_il_fract.hpp  cal_il_frexp.hpp  cal_il_ldexp.hpp  cal_il_log.hpp  cal_il_math_basic.hpp  cal_il_max.hpp  cal_il_min.hpp  cal_il_polevl.hpp  cal_il_rsqrt.hpp  cal_il_sqrt.hpp  cal_il_tanh.hpp
regression/: rsqrt.cpp  uav.cpp
trunk/: CMakeLists.txt  ChangeLog  README  TODO
trunk/examples/: CMakeLists.txt  cal_il_double4.hpp  coalescingtest.cpp  dbl_nbody.cpp  dbl_nbody_kernel.cpp  dbl_nbody_worker.cpp  dbl_nbody_worker.h  func.cpp  matrixmult.cpp  matrixmult2.cpp  matrixmult3.cpp  nbody.cpp  nbody_kernel.cpp  nbody_worker.cpp  nbody_worker.h  peekflops.cpp  uavatomics.cpp  uavwrite.cpp  vectorquantization.cpp
trunk/include/cal/: cal.hpp  cal_ext.h  cal_il.hpp  cal_il_flat2d.hpp  cal_il_math.hpp  cal_il_rv7xx.hpp  cal_program_cache.hpp  calcl.h
trunk/include/cal/il/: cal_il.hpp  cal_il_base_types.hpp  cal_il_expression_assignable.hpp  cal_il_expression_swizzle.hpp  cal_il_expression_types.hpp  cal_il_flat2d.hpp  cal_il_flowcontrol.hpp  cal_il_flowcontrol_cmp.hpp  cal_il_func.hpp  cal_il_functors.hpp  cal_il_functors_bitop.hpp  cal_il_functors_cast.hpp  cal_il_functors_math.hpp  cal_il_functors_mathop.hpp  cal_il_functors_multimedia.hpp  cal_il_functors_relop.hpp  cal_il_input.hpp  cal_il_lds.hpp  cal_il_lds_atomics.hpp  cal_il_math.hpp  cal_il_misc.hpp  cal_il_multimedia.hpp  cal_il_ocl_functions.hpp  cal_il_operators.hpp  cal_il_operators_muldiv.hpp  cal_il_rv7xx.hpp  cal_il_source.hpp  cal_il_swizzle.hpp  cal_il_swizzle_traits.hpp  cal_il_type_traits.hpp  cal_il_types.hpp  cal_il_uav.hpp  cal_il_uav_atomics.hpp
trunk/include/cal/il/math/: cal_il_abs.hpp  cal_il_atanh.hpp  cal_il_dd.hpp  cal_il_exp.hpp  cal_il_floor.hpp  cal_il_frexp.hpp  cal_il_functors_math.hpp  cal_il_ldexp.hpp  cal_il_log.hpp  cal_il_math_basic.hpp  cal_il_min.hpp  cal_il_reciprocal.hpp  cal_il_round.hpp  cal_il_rsqrt.hpp  cal_il_sqrt.hpp  cal_il_tanh.hpp
trunk/regression/: CMakeLists.txt  rsqrt.cpp
